--- a/projet/Makefile
+++ b/projet/Makefile
@@ -1,6 +1,12 @@
+CC=gcc
+
 SRC_DIR=./src
 BIN_DIR=./bin
 HEADERS_DIR=./headers
 
 EXEC=prog
 
+all: $(EXEC)
+
+$(EXEC): $(SRC_DIR)/main.c
+	$(CC) -o $(EXEC) $(SRC_DIR)/main.c
