Add generation with makefile

--- a/projet/Makefile
+++ b/projet/Makefile
@@ -4,9 +4,18 @@ SRC_DIR=./src
 BIN_DIR=./bin
 HEADERS_DIR=./headers
 
+SRC=$(wildcard $(SRC_DIR)/*.c)
+OBJ=$(SRC:.c=.o)
+
 EXEC=prog
 
 all: $(EXEC)
 
-$(EXEC): $(SRC_DIR)/main.c
-	$(CC) -o $(EXEC) $(SRC_DIR)/main.c
+$(EXEC): $(OBJ)
+	$(CC) -o $(BIN_DIR)/$@ $(SRC)
+
+clean:
+	rm -rf $(SRC_DIR)/*.o
+
+mrproper: clean
+	rm -rf $(BIN_DIR)/$(EXEC)
