--- a/projet/Makefile
+++ b/projet/Makefile
@@ -6,6 +6,7 @@ HEADERS_DIR=./headers
 
 SRC=$(wildcard $(SRC_DIR)/*.c)
 OBJ=$(SRC:.c=.o)
+HEADERS=$(wildcard $(HEADERS_DIR)/*.h)
 
 EXEC=prog
 
@@ -19,3 +20,5 @@ clean:
 
 mrproper: clean
 	rm -rf $(BIN_DIR)/$(EXEC)
+
+.PHONY: clean
