--- a/tp02/Makefile
+++ b/tp02/Makefile
@@ -5,58 +5,25 @@ LDFLAGS=-I ./include/
 SRC_DIR=./src
 INC_DIR=./include
 BIN_DIR=./bin
-DOC_DIR=./doc
-GCOV_DIR=./gcov
-
-GCOVFLAGS=-O0 --coverage -lgcov -Wall -g
-
-LCOV_REPORT=report.info
 
 SRC=$(wildcard $(SRC_DIR)/*.c)
 OBJ=$(SRC:.c=.o)
-EXEC=skeleton
 
-GEXEC=$(EXEC).cov
+all: exo1 exo2 exo3
 
-AR_NAME=archive_$(EXEC).tar.gz
+exo1: $(SRC_DIR)/exo1.c
+	gcc -o $(BIN_DIR)/exo1 $(SRC_DIR)/exo1.c
 
+exo2: $(SRC_DIR)/exo2.c
+	gcc -o $(BIN_DIR)/exo2 $(SRC_DIR)/exo2.c
 
-all: $(SRC) $(EXEC)
+exo3: $(SRC_DIR)/exo3.c
+	gcc -o $(BIN_DIR)/exo3 $(SRC_DIR)/exo3.c
 
-%.o:%.c
-	$(CC) $(CFLAGS) $< $(LDFLAGS) -o $@
-
-$(EXEC): $(OBJ)
-	$(CC) -o $(BIN_DIR)/$@ -Wall $(LDFLAGS) $(OBJ)
-
-$(GEXEC):
-	$(CC) $(GCOVFLAGS) -o $(GCOV_DIR)/$@ -Wall $(LDFLAGS) $(SRC)
-
-doc:
-	doxygen $(DOC_DIR)/doxygen.conf
-
-gcov: $(GEXEC)
-	# generate some data for gcov by calling the generated binary with various options
-	$(GCOV_DIR)/$(GEXEC) -h
-	$(GCOV_DIR)/$(GEXEC) -i input -o output -v
-
-	find ./ -maxdepth 1 -name *.gcno -exec mv {} $(GCOV_DIR) \;
-	find ./ -maxdepth 1 -name *.gcda -exec mv {} $(GCOV_DIR) \;
-
-	gcov -o $(GCOV_DIR) $(GEXEC)
-	lcov -o $(GCOV_DIR)/$(LCOV_REPORT) -c -f -d $(GCOV_DIR)
-	genhtml -o $(GCOV_DIR)/report $(GCOV_DIR)/$(LCOV_REPORT)
-
-package: gcov doc all
-	rm -rf $(AR_NAME)
-	tar cvfz $(AR_NAME) ./*
 clean:
 	rm -rf $(OBJ)
 
 mrproper: clean
 	rm -rf $(BIN_DIR)/*
-	rm -rf $(DOC_DIR)/latex/
-	rm -rf $(DOC_DIR)/html/
-	rm -rf $(GCOV_DIR)/*
 
 .PHONY: doc
