--- a/tp03/Makefile
+++ b/tp03/Makefile
@@ -1,4 +1,5 @@
 CC=gcc
+THREADFLAG=-pthread
 CFLAGS=-Wall -c
 LDFLAGS=-I ./include/
 
@@ -21,35 +22,14 @@ GEXEC=$(EXEC).cov
 AR_NAME=archive_$(EXEC).tar.gz
 
 
-all: $(SRC) $(EXEC)
+all: a_exo1 b_exo1
 
-%.o:%.c
-	$(CC) $(CFLAGS) $< $(LDFLAGS) -o $@
+a_exo1: $(SRC_DIR)/a_exo1.c
+	$(CC) -o $(BIN_DIR)/a_exo1 $(SRC_DIR)/a_exo1.c
 
-$(EXEC): $(OBJ)
-	$(CC) -o $(BIN_DIR)/$@ -Wall $(LDFLAGS) $(OBJ)
+b_exo1: $(SRC_DIR)/b_exo1.c
+	$(CC) $(THREADFLAG) -o $(BIN_DIR)/b_exo1 $(SRC_DIR)/b_exo1.c
 
-$(GEXEC):
-	$(CC) $(GCOVFLAGS) -o $(GCOV_DIR)/$@ -Wall $(LDFLAGS) $(SRC)
-
-doc:
-	doxygen $(DOC_DIR)/doxygen.conf
-
-gcov: $(GEXEC)
-	# generate some data for gcov by calling the generated binary with various options
-	$(GCOV_DIR)/$(GEXEC) -h
-	$(GCOV_DIR)/$(GEXEC) -i input -o output -v
-
-	find ./ -maxdepth 1 -name *.gcno -exec mv {} $(GCOV_DIR) \;
-	find ./ -maxdepth 1 -name *.gcda -exec mv {} $(GCOV_DIR) \;
-
-	gcov -o $(GCOV_DIR) $(GEXEC)
-	lcov -o $(GCOV_DIR)/$(LCOV_REPORT) -c -f -d $(GCOV_DIR)
-	genhtml -o $(GCOV_DIR)/report $(GCOV_DIR)/$(LCOV_REPORT)
-
-package: gcov doc all
-	rm -rf $(AR_NAME)
-	tar cvfz $(AR_NAME) ./*
 clean:
 	rm -rf $(OBJ)
 
